# app/src/main/java/com/example/myapplication1/data/model/ProfilePlaylist.kt
@@ -1,9 +1,0 @@
-package com.example.myapplication1.data.model
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class ProfilePlaylist(
-    val id: Int,
-    val title: String
-)
