# app/src/main/java/com/example/myapplication1/data/model/SearchResponse.kt
@@ -1,9 +1,0 @@
-package com.example.myapplication1.data.model
-
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class SearchResponse(
-    val success: Boolean,
-    val message: String
-)
